# sc-weather

./: .gitignore  404.html  README.md  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
development/: weather_check.py
docs/: icon_provider.md  index.md  weather_client.md
icon_provider/: index.html
scripts/: __init__.py  convert_svg_to_white.py  crop_svg_viewbox.py  process_icons.sh
search/: search_index.json
site/: index.html  sitemap.xml
site/icon_provider/: index.html
site/search/: search_index.json
src/sc_weather/: __init__.py  client.py  icon_provider.py  models.py  normalization.py
src/sc_weather/providers/: open_meteo_provider.py  owm_provider.py
tests/: conftest.py  test_weather_client.py  test_weather_icon_provider.py  test_weather_owm_provider.py
weather_client/: index.html
