[project]
name = "sc-weather"
version = "2.9.1"
description = "A simple wrapper for the OpenWeatherMap and Open-Meteo weather providers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyowm>=3.5.0",
    "sc-foundation-services>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.15.1",
    "pre-commit>=3.5.0",
    "pytest-dotenv>=0.5.2",
]
docs = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "pdoc>=14.7.0",
]
all = [
    "sc-weather[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/NickElseySpelloC"
Repository = "https://github.com/NickElseySpelloC/sc-weather"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[dev.env.sync]
remote="~/Library/CloudStorage/Dropbox/Development/dev_setup/app_config/sc-weather"
patterns = [
    ".env",
    ".vscode/launch.json",
    "development/*.yaml",
    "development/*.log",
    "tests/config.yaml",
]
